member info in single line